# nanoporeReads_dataTransfer

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  ChangeLog  LICENSE  README.md  baseCalling.py  config.ini  config.template.yaml  config.yaml  createEnvs.sh  env.yaml  env.yml  mapping.py  nanopore_pipeline.py  ont.yaml  ont_pipeline.Snakefile  ont_pipeline.py  pipeline.py  pyproject.toml  qc.py  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: conda_envs.yaml  install.yaml  release-please.yml
data/: primers.fna
misc/: pod5_sample.sh  sendEmail.py  subsampleFC.sh  tidyNanopore.py
rules/: baseCalling.Snakefile  baseCalling.py  data_transfer.py  mapping.py  qc.py  rename.Snakefile  rename.py
src/npr/: communication.py  logging.py  models.py  ont.py  ont_pipeline.py  snakehelper.py
src/npr/rules/: 0_prepare.smk  1_basecalling.smk  2_rename.smk  3_qc.smk  4_data_transfer.smk  5_mapping.smk  6_multiqc.smk  basecalling.smk  mapping.py  ont_pipeline.smk  rename.smk
src/npr/rules_dorado/: 00_basecall.smk  00_prepare.smk  00_prepare_bam.smk  00_start.smk  01_basecall.smk  01_basecall.smk_deprecated  01_prepare.smk  02_basecall.smk  02_demux.smk  02_demux.smk_deprecated  02_prepare_bam.smk  03_rename.smk  03_rename.smk_deprecated  03_seqsum.smk  04_fastq.smk  04_seqsum.smk  05_fastq.smk  05_porechop.smk  06_align.smk  06_modbed.smk  07_falco.smk  07_modbed.smk  08_fastqc.smk  08_kraken.smk  08_multiqc.smk  08_pycoqc.smk  09_kraken.smk  09_pycoqc.smk  09_transfer.smk  10_kraken.smk  10_multiqc.smk  11_multiqc.smk  11_transfer.smk  12_transfer.smk  ont_pipeline.smk
src/npr/rules_dorado/envs/: align.yaml  falco.yaml  fastqc.yaml  kraken.yaml  modbam2bed.yaml  modkit.yaml  multiqc.yaml  pod5.yaml  porechop.yaml  (+3 more)
