[metadata]
name = npr
description = processing ONT data.
long_description = file: README.md
keywords = ONT, demultiplexing, basecalling
license = MIT
url = https://www.github.com/maxplanck-ie/nanoporereads_datatransfer
author = LeilyR
author.email = leila.rabbani@gmail.com


[options]
package_dir =
  = src
python_requires = >=3.6

[options.package_data]
* = *smk
* = envs/*yaml

[options.entry_points]
console_scripts =
  ont = npr.ont:ont
  genmodel = npr.models:main
